Fixed horizontal scrolling issue

--- a/resources/css/gallery.css
+++ b/resources/css/gallery.css
@@ -33,9 +33,6 @@
 	font-size: 30px;
 	font-family: 'Open Sans', sans-serif;
 	text-decoration: none;
-	width: 100%;
-	display: inline-block;
-	margin: 20px;
 }
 
 .galleryBody{
